--- a/incremental_inn.css
+++ b/incremental_inn.css
@@ -1,53 +1,27 @@
-#scenario { width: 68em; margin: 1em auto; }
-
-#left,
-#shared,
-#right { display: block; width: 20em; float: left; margin: 0 1em; }
-
-#right,
-#left {
-  padding: 0 2mm;
-  height: 5cm;
-  transition:         background-color 0.3s ease-in-out;
-  -moz-transition:    background-color 0.3s ease-in-out;
-  -webkit-transition: background-color 0.3s ease-in-out;
-}
-
-
-hr { margin: 1em auto; width: 60%; clear: both; height: 3px; }
-
-.important { width: 20em; padding: 0.2em; margin: 1em auto; }
+/* RESET */
+h1, h2, h3, h4, h5 { font-size: inherit; }
+a { text-decoration: none; }
 
 /* COLORS */
-#right:hover,
-#left:hover,
-body { background-color: #dde; color: #011; }
+body { background-color: #100; }
 
-#right,
-#left { background-color: #233; color: #233; }
+a,
+body { color: #d70; }
 
-.important { background-color: #9aa; border: 2px solid #255; }
-
-hr { background-color: #686; }
-
-h1 { color: #699; }
-h2 { color: #686; }
-
-#timer { color: #686; }
-#timer.running { color: #000; }
-#timer.finished { color: #f00; }
+#game section,
+#game section h2 { background-color: #410; }
+#game section:target h2 { background-color: #620; }
 
 /* FONTS */
-.important { font-size: 1.2em; line-height: 1.4em;}
-#timer { font-size: 1.3em; line-height: 1em; }
-#timer.finished { font-weight: bold; }
+body { font-size: 100%; }
 
 /* POSITION & SIZE */
-#game { position: relative; display: block; width: 40em; height: 15em; margin: 1em auto; }
-#game section { position: absolute; display: block; top: 1.8em; left: 0; z-index: 0; background-color: #eee; width: 30em; }
+#game { position: relative; display: block; width: 590px; margin: 1em auto; }
+#game section { position: absolute; display: block; top: 1.8em; left: 0; z-index: 0; width: 30em; height: 20em; padding-top: 1em; }
 #game section:first-child { z-index: 1; }
-#game section h2 { position: absolute; width: 9em; height: 1.8em; top: -2em; background-color: #eee; }
+#game section h2 { position: absolute; width: 9em; height: 1.8em; top: -2em; padding: 2px 0.5em; }
 #game section:nth-child(2) h2 { left: 10em; }
 #game section:nth-child(3) h2 { left: 20em; }
 #game section:target { z-index: 2; }
-#game section:target h2 { background-color: #fdd; }
+
+#timeline .item { margin: 1em 0; }
