--- a/incremental_inn.css
+++ b/incremental_inn.css
@@ -1,5 +1,6 @@
 /* RESET */
-h1, h2, h3, h4, h5 { font-size: inherit; }
+body,html,div,span,table,
+h1, h2, h3, h4, h5 { font-weight: normal; font-size: inherit; margin: 0; }
 a { text-decoration: none; }
 
 /* COLORS */
@@ -13,10 +14,20 @@ body { color: #d70; }
 #game section:target h2 { background-color: #620; }
 
 /* FONTS */
-body { font-size: 100%; }
+body { font-size: 100%;
+	font-family: baskerville,palatino,'palatino linotype',georgia,serif;
+}
+
+#inntitle { font-size: 1.4em; }
+#inntitle .inn,
+#inntitle .city { font-style: italic; }
 
 /* POSITION & SIZE */
-#game { position: relative; display: block; width: 590px; margin: 1em auto; }
+#inntitle,
+#game { position: relative; display: block; width: 590px; }
+
+#inntitle { margin: 2em auto 1em auto; }
+#game { margin: 1em auto; }
 #game section { position: absolute; display: block; top: 1.8em; left: 0; z-index: 0; width: 30em; height: 20em; padding-top: 1em; }
 #game section:first-child { z-index: 1; }
 #game section h2 { position: absolute; width: 9em; height: 1.8em; top: -2em; padding: 2px 0.5em; }
