--- a/incremental_inn.css
+++ b/incremental_inn.css
@@ -32,6 +32,7 @@ table a { text-decoration: underline; }
 #game { position: relative; display: block; width: 590px; }
 
 #inntitle { margin: 2em auto 1em auto; }
+#sidebar,
 #game { margin: 1em auto; }
 #game section { position: absolute; display: block; top: 1.8em; left: 0; z-index: 0; width: 30em; height: 20em; padding-top: 1em; }
 #game section:first-child { z-index: 1; }
@@ -42,6 +43,8 @@ table a { text-decoration: underline; }
 
 #timeline .item { padding: 2px 5px; margin: 5px 2px; opacity: 1; }
 #timeline .item.hidden { opacity: 0; }
+
+#sidebar { padding-left: 600px; width: 10em; }
 
 /* EFFECTS */
 #timeline .item {
