--- a/incremental_inn.css
+++ b/incremental_inn.css
@@ -5,7 +5,14 @@ h1, h2, h3, h4, h5 { font-weight: normal; font-size: inherit; margin: 0; }
 a { text-decoration: none; }
 
 /* COLORS */
-body { background-color: #100; }
+html {
+	background-color: #100;
+	background: url(background.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
 
 a,
 body { color: #d70; }
