--- a/incremental_inn.css
+++ b/incremental_inn.css
@@ -52,6 +52,8 @@ table a { text-decoration: underline; }
 #timeline .item { padding: 2px 5px; margin: 5px 2px; opacity: 1; }
 #timeline .item.hidden { opacity: 0; }
 
+#beverageList input { width: 5em; }
+
 #sidebar { padding-left: 600px; width: 10em; }
 
 /* EFFECTS */
