--- a/incremental_inn.css
+++ b/incremental_inn.css
@@ -2,12 +2,11 @@
 body,html,div,span,table,tr,td,
 p,li,
 h1, h2, h3, h4, h5 { font-weight: normal; font-size: inherit; margin: 0; }
-a { text-decoration: none; }
+li { list-style-type: none; }
 
 /* COLORS */
 html {
-	background-color: #100;
-	background: url(background.jpg) no-repeat center center fixed;
+	background-color: #112;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -15,7 +14,7 @@ html {
 }
 
 a,
-body { color: #fc6; }
+body { color: #dde; }
 
 #sidebar table,
 #game .item,
@@ -36,25 +35,19 @@ body { font-size: 100%;
 table a { text-decoration: underline; }
 
 /* POSITION & SIZE */
-#inntitle,
-#game { position: relative; display: block; width: 590px; }
 
-#inntitle { margin: 2em auto 1em auto; }
-#sidebar,
-#game { margin: 1em auto; }
-#game section { position: absolute; display: block; top: 1.8em; left: 0; z-index: 0; width: 30em; height: 20em; padding-top: 1em; }
-#game section:first-child { z-index: 1; }
-#game section h2 { position: absolute; width: 9em; height: 1.8em; top: -2em; padding: 2px 0.5em; }
-#game section:nth-child(2) h2 { left: 10em; }
-#game section:nth-child(3) h2 { left: 20em; }
-#game section:target { z-index: 2; }
+#actions { margin: 0 auto; width: 50em; }
+#notifications,
+#debug,
+#always_actions { width: 20em; float: left; }
+#debug { width: 10em; }
 
-#timeline .item { padding: 2px 5px; margin: 5px 2px; opacity: 1; }
-#timeline .item.hidden { opacity: 0; }
+#actions li { margin: 1em 0; }
 
-#beverageList input { width: 5em; }
+#notifications { min-height: 30em; }
 
-#sidebar { padding-left: 600px; width: 10em; }
+.clear,
+footer { clear: both; }
 
 /* EFFECTS */
 #timeline .item {
