--- a/incremental_inn.css
+++ b/incremental_inn.css
@@ -39,14 +39,18 @@ table a { text-decoration: underline; }
 #actions { margin: 0 auto; width: 50em; }
 #notifications,
 #debug,
-#always_actions { width: 20em; float: left; }
-#debug { width: 10em; }
+#always_actions { float: left; }
+#notifications { width: 20em; }
+#always_actions,
+#debug { width: 10em; margin-left: 3em; }
 
-#always_actions button { margin: 2em 1em; float: left; }
+#always_actions button { margin: 0.5em 2em; float: left; }
 
+#actions { margin: 3em 1em; }
 #actions li { margin: 1em 0; }
 
 #notifications { min-height: 30em; }
+#notifications .item { margin-top: 0.5em; }
 
 .clear,
 footer { clear: both; }
