--- a/inccth.css
+++ b/inccth.css
@@ -39,7 +39,7 @@ table a { text-decoration: underline; }
 #actions { margin: 0 auto; width: 50em; }
 #notifications,
 #debug,
-#always_actions { float: left; }
+#always_actions { float: left; position: relative; }
 #notifications { width: 20em; }
 #always_actions,
 #debug { width: 10em; margin-left: 3em; }
@@ -56,11 +56,13 @@ table a { text-decoration: underline; }
 footer { clear: both; }
 
 /* EFFECTS */
+tr,
 button,
 .notification {
 	transition: opacity 1s, height 1s;
 	-webkit-transition: opacity 1s, height 1s;
 }
+tr.hidden,
 button.hidden,
 .notification.hidden {
 	opacity: 0;
